@@ -15,27 +15,35 @@ module Fairy
       "NInputVArray"
     end
 
-    def create_and_start_nodes
-      begin
-	no = 0
-	@varray.arrays_size.times do 
-	  @create_node_mutex.synchronize do
-	    subarray = @varray.arrays_at(no)
-	    @controller.assign_processor(self, 
-					 :SAME_PROCESSOR_OBJ, 
-					 subarray) do |processor|
-	      njob = create_node(processor, subarray)
-	      njob.start
-	      no +=1
-	    end
-	  end
-	end
-      rescue BreakCreateNode
-	# do nothing
-	Log::debug self, "BREAK CREATE NODE: #{self}" 
-      ensure
-	self.number_of_nodes = no
-      end
+    def start
+      @bvarray_place = BVarrayPlace.new(@varray)
+      start_create_nodes
     end
+
+    def input
+      @bvarray_place
+    end
+
+#     def create_and_start_nodes
+#       begin
+# 	no = 0
+# 	@varray.arrays_size.times do 
+# 	  @create_node_mutex.synchronize do
+# 	    subarray = @varray.arrays_at(no)
+# 	    @controller.assign_processor(self, 
+# 					 :SAME_PROCESSOR_OBJ, 
+# 					 subarray) do |processor|
+# 	      njob = create_node(processor, subarray)
+# 	      njob.start
+# 	      no +=1
+# 	    end
+# 	  end
+# 	end
+#       rescue BreakCreateNode
+# 	# do nothing
+# 	Log::debug self, "BREAK CREATE NODE: #{self}" 
+#       ensure
+# 	self.number_of_nodes = no
+#       end
   end
 end
