@@ -4,19 +4,22 @@ module Fairy
   class NInputVArray<NSingleExportInput
     Processor.def_export self
 
-    def initialize(processor, bjob, opts, array)
-      super
-      @array = array
+#    def initialize(processor, bjob, opts)
+#      super
+#    end
+
+    def open(nvarrayplace)
+      @array = nvarrayplace.ary
+      self.no = nvarrayplace.no
+Log::debug(self, "INPUT_VARRAY: no= #{@no}")
+
     end
 
-    def start
-      super do
-	for i in @array
-	  @export.push i
-	end
-      end
+    def basic_each(&block)
+Log::debug(self, "INPUT_VARRAY:S")
+      @array.each &block
+Log::debug(self, "INPUT_VARRAY:E")
     end
-
   end
 end
 
